# TianTing

./: .env.example  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  app.ini  docker-compose.yml  pyproject.toml  requirements.txt  reset_pwd.py  setup.py  supervisor.conf
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/agents/: __init__.py  graph.py  mcp_client.py  state.py
backend/app/agents/nodes/: __init__.py  after_sale.py  direct_reply.py  faq.py  human_transfer.py  orchestrator.py
backend/app/agents/prompts/: after_sale.txt  (+2 more)
backend/app/api/: __init__.py  analytics.py  router.py
backend/app/core/: captcha.py  database.py  exceptions.py  middleware.py  redis.py  security.py  token_store.py
backend/app/graph/: __init__.py  neo4j_client.py  query_service.py  sync_service.py
backend/app/im/: __init__.py  base.py  registry.py
backend/app/models/: __init__.py  agent.py  base.py  conversation.py  human_session.py  knowledge.py  mcp_server.py  message.py  model_config.py  quick_reply.py  setting.py  skill.py  tool.py  user.py
backend/app/rag/: __init__.py  embedder.py  qa_search.py  qdrant_client.py  retriever.py
backend/app/schemas/: __init__.py  agent.py  auth.py  common.py  conversation.py  dashboard.py  human_service.py  knowledge.py  settings.py  skill.py  tool.py
backend/app/services/: __init__.py  agent_log_service.py  agent_service.py  analytics_export_service.py  auth_service.py  cache_service.py  conversation_service.py  dashboard_service.py  human_service.py  knowledge_service.py  mcp_service.py  model_config_service.py  mongo_client.py  mongo_log_service.py  settings_service.py  skill_service.py
backend/app/tasks/: __init__.py  document_tasks.py  worker.py
backend/app/ws/: __init__.py  channels.py  manager.py
backend/docker/: entrypoint.sh
(+115 files in other folders)
